--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,13 @@ wheels/
 .installed.cfg
 *.egg
 
+
+
+cifar-10-batches-py/
+
+
+
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
